--- a/Week-3/Session-8/Portfolio/Main/portfolio.css
+++ b/Week-3/Session-8/Portfolio/Main/portfolio.css
@@ -1,72 +1,200 @@
 * {
-  padding: 0;
-  margin: 0;
-  font-family: sans-serif;
-  background-color: #141414;
-  color: #fafafa;
-}
-.links a:nth-child(1){
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
+    background-color: #141414;
+    color: #fafafa;
+  }
+  .links a:nth-child(1) {
     margin-right: 20px;
-}
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20px 80px;
-}
-.navbar p{
+  }
+  .navbar {
+    /* padding: 25px 10vw; */
+    width: 100%;
+  
+    padding: 30px 0 30px;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 1px solid #5f5f5fb9;
+    background: var(--bg-dark);
+    color: #181818;
+    top: 0;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+  }
+  .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+  }
+  .navbar p {
     font-size: 23px;
     font-weight: 600;
-}
-.navbar span{
+  }
+  .navbar span {
     color: #abf129;
-}
-.mail, .number {
-  font-family: sans-serif;
-  text-decoration: none;
-  font-weight: 600;
-}
-.btmBorder{
-    border-bottom: 1px solid #615e5e33;
-}
-header{
+  }
+  .mail,
+  .number {
+    font-family: sans-serif;
+    text-decoration: none;
+    font-weight: 600;
+  }
+  .btmBorder {
+    border-bottom: 1px solid #5f5f5fb9;
+  }
+  header {
     margin: 20px 80px;
-    height: 500px;
+    height: 83vh;
     display: flex;
     justify-content: center;
-    flex-direction: column;
-}
-header h1{
+  }
+  header h1 {
     font-size: 93px;
-    text-transform:uppercase;
+    text-transform: uppercase;
     letter-spacing: 2px;
-}
-header h1:last-child{
+  }
+  header h1:last-child {
     font-size: 93px;
-    text-transform:uppercase;
+    text-transform: uppercase;
     letter-spacing: 2px;
-    
-}
-.code{
+  }
+  .code {
     display: flex;
     align-items: center;
-}
-.codeBorder{
+  }
+  .hero-section {
+    width: 80%;
+    margin: auto;
+  }
+  .social-links {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+  }
+  .social-links i {
+    font-size: 26px;
+    margin-bottom: 25px;
+    cursor: pointer;
+  }
+  .scroll-next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 10px;
+    border: 1px solid #5f5f5fb9;
+    margin-right: -12px;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+  .scroll-next i {
+    margin-top: 20px;
+  }
+  .codeBorder {
     border: 1px solid #fafafa;
-    display: flex;align-items: center;justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 20px;
     padding: 10px 50px;
     margin-right: 30px;
-}
-.cvDownload{
-    font-size: 22px;
+  }
+  .cvDownload {
+    font-size: 30px;
     text-decoration: none;
     text-transform: uppercase;
-}
-.contactBtn{
-    padding: 10px 30px;
+    margin-left: 20px;
+  }
+  .contactBtn {
+    background: transparent;
+    padding: 10px 33px;
+    border: 1px solid #f7f7f7;
+    position: relative;
+    transition: all 0.1s;
+    overflow: hidden;
+    z-index: 1;
+    border-radius: 100px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 28px;
+    cursor: pointer;
+  }
+  marquee {
+    height: 50px;
+    border-top: 1px solid #f7f7f7;
+    border-bottom: 1px solid #f7f7f7;
+    display: flex;
+    align-items: center;
+    margin: 30px 0;
+  }
+  marquee p {
+    white-space: nowrap;
+    font-size: 26px;
+    line-height: 32px;
+  }
+  marquee p span {
+    color: #abf129;
+    font-style: italic;
+    text-transform: capitalize;
+  }
+  .dot {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #abf129;
+  }
+  .about {
+    margin: 20px 80px;
+  }
+  .about p {
+    font-weight: 600;
+    font-size: 70px;
+    margin-top: 10%;
+    display: inline-flex;
+  }
+  .about p span {
+    background-color: #abf129;
+    height: 15px;
+    width: 15px;
+    border-radius: 100%;
+    margin-top: 50px;
+    margin-right: 20px;
+  }
+  .about-picture{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    width: 14%;
+    justify-content: space-between;
+  }
+  .about-picture div i{
     font-size: 30px;
-    border: 1px solid #fafafa;
-    border-radius: 30px;
-    margin-left: 30px;
-}
+    margin-right: 20px;
+  }
+  .about-picture div{
+    font-size: 30px;
+    display: flex;justify-content: space-between;
+    width: 10%;
+  }
+  article{
+    margin-top: 15px;
+    font-size: 25px;
+    letter-spacing: 1px;
+    line-height: 50px;
+    width: 51%;
+  }
+  article span{
+    font-style: italic;
+  }
+  .skills{
+    margin: 20px 80px;
+  }
+  .skills p span{
+    
+  }
